tests/ui/method_no_resource.stderr
error: Missing Resource struct. Example: #[read_all(MyResource)]
 --> $DIR/method_no_resource.rs:7:1
  |
7 | #[read_all]
  | ^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `_gotham_restful_foo_resource_read_all_setup_impl` in this scope
 --> $DIR/method_no_resource.rs:3:10
  |
3 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
